header : fixed bug on mobile and tablet menu by removing overflow hidden and position relative

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -18,7 +18,6 @@ body {
     font-family: 'Chakra Petch', sans-serif;
     user-select: none;
     scrollbar-width: none;
-    overscroll-behavior: none;
 }
 
 body::-webkit-scrollbar {
@@ -326,11 +325,6 @@ p {
 /* --------------------- */
 
 /* Header */ 
-
-header {
-    overflow: hidden;
-    position: relative;
-}
 
 .shadow-head-100 {
     transition: box-shadow 0.5s ease-out;
